test/spec_vectors/select/fail/module_20.wat
(module (func $type-2nd-operand-empty-in-block (i32.const 0) (i32.const 0) (block (i32.const 0) (select) (drop))))